import io.github.fvarrui.javapackager.gradle.PackageTask

/*
 * This file was generated by the Gradle 'init' task.
 */


buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'io.github.fvarrui:javapackager:1.6.2'

    }

}

plugins {
    id 'java'
    id 'maven-publish'
    id 'application'
}

apply plugin: 'io.github.fvarrui.javapackager.plugin'

repositories {
    mavenCentral()
}
dependencies {
    implementation 'org.hid4java:hid4java:0.7.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'org.opengameband.Main'
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

application {
    mainClass = "org.opengameband.Main"
}

test {
    useJUnitPlatform()
}

group = 'org.vorax.henry.OpenGameband'
version = '0.1.0'
description = 'OpenGameband'
java.sourceCompatibility = JavaVersion.VERSION_11

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

task nativePackage(type: PackageTask, dependsOn: build) {
    mainClass = 'org.opengameband.OpenGameband'
    bundleJre = true
    generateInstaller = false
    administratorRequired = false
    platform = 'auto'
    macConfig {
        appId = 'org.vorax.henry.OpenGameband'
        icnsFile = file('resources/icon.icns')
        generateDmg = true
        generatePkg = false
        relocateJar = true
        volumeIcon = file('resources/icon.icns')
    }
}
